<resources>
    <integer name="font_100">100</integer>
    <integer name="font_200">200</integer>
    <integer name="font_300">300</integer>
    <integer name="font_400">400</integer>
    <integer name="font_500">500</integer>
    <integer name="font_600">600</integer>
    <integer name="font_700">700</integer>
    <integer name="font_800">800</integer>
    <integer name="font_900">900</integer>
    <string name="app_name">Mobile Cashier</string>
    <string name="cap_empty"></string>
    <string name="cap_settings">Settings</string>
    <string name="cap_tools">Tools</string>
    <string name="cap_logout">Logout</string>
    <string name="cap_users">Users</string>
    <string name="cap_selectuser">Select user</string>
    <string name="cap_username">User name</string>
    <string name="cap_departmentname">Department</string>
    <string name="cap_departments">Departments</string>
    <string name="cap_cart">Cart</string>
    <string name="cap_department_select">Select sales departments</string>
    <string name="cap_color">color</string>
    <string name="cap_size">size</string>
    <string name="cap_pc">pc</string>

    <string name="cap_total_qty">Total qty</string>
    <string name="cap_saller">Saller</string>
    <string name="cap_payment_type">Payment type</string>


    <string name="cap_sales">Sales</string>
    <string name="cap_checkout">Checkout</string>

    <string name="cap_underconstruction">Under construction</string>
    <string name="cap_salesreturns">Sales returns</string>
    <string name="cap_reports">Reports</string>

    <string name="cap_loading">Loading...</string>
    <string name="cap_notselected">Not selected</string>
    <string name="cap_enter">Enter</string>
    <string name="cap_register">Register</string>
    <string name="cap_enterpassword">Enter password</string>

    <string name="cap_error">Error</string>

    <string name="err_data_empty">Data is empty</string>
    <string name="error_unassigned">Unassigned error</string>
    <string name="error_user_not_set">User not selected</string>
    <string name="error_department_not_set">Unknown department</string>
    <string name="error_product_already_exists">This product already exists</string>
    <string name="error_product_less_rest">The rest of the goods is less than the sale</string>

    <string name="error_scanner_cancelled">Code scanner is cancelled.</string>
    <string name="error_camera_permission_not_granted">Camera permission is not granted.</string>
    <string name="error_scanner_default_message">Failed to scan code: %1$s</string>
    <string name="error_app_name_unavailable">App name is not set.</string>


    <string name="settings_not_selected">Not selected</string>
    <string name="settings_common">Основное</string>
    <string name="settings_category_network">Network</string>

    <string name="settings_cap_URL">Connection pofile</string>
    <string name="settings_cap_connect_timeout">Connect timeout (s)</string>
    <string name="settings_cap_network_read_timeout">Read timeout (s)</string>
    <string name="settings_cap_network_write_timeout">Write timeout (s)</string>


    <string name="settings_cap_connection_desc">Service address URL</string>
    <string name="settings_cap_devicetype">Device type</string>
    <string name="settings_cap_hardware_scanner_priority">Hardware scanner priority</string>
    <string name="settings_cap_manual_barcode">Enter barcode manual</string>

    <string name="settings_cap_check_value">Check value</string>
    <string name="settings_cap_digital_value">Digital value</string>
    <string name="settings_cap_HEX_value">HEX value</string>
    <string name="settings_cap_custom_value">Custom value [0-7] default: 3</string>

    <string name="settings_profile_work" translatable="false">Work</string>
    <string name="settings_profile_test" translatable="false">Test</string>
    <string name="settings_profile_debug" translatable="false">Debug</string>

    <string name="settings_devicetype_android">Android device</string>
    <string name="settings_devicetype_honeywell_eda50k">Honeywell EDA50K</string>

    <string name="settings_cap_category_02">Category 02</string>
    <string name="settings_cap_category_03">Category 03</string>

    <string name="settings_cap_Keys">Keys</string>
    <string name="settings_cap_Key1">Key 1</string>
    <string name="settings_cap_Key2">Key 2</string>
    <string name="settings_cap_Key3">Key 3</string>

</resources>