<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Activities.security.RegisterActivity">

    <ImageView
        android:id="@+id/register_imageuser"
        android:layout_width="90dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/icon_user"
        android:tint="@color/control_light"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseAppTint"
        android:contentDescription="@string/cap_empty" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_button_enter"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/control_button_rounded"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:text="@string/cap_enter"
        android:textColor="@color/text_light"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:minHeight="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_imageuser"
        tools:ignore="MissingConstraints">


        <TextView
            android:id="@+id/register_text_username"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:ems="10"
            android:gravity="center_vertical"
            android:inputType="textPersonName"
            android:text="@string/cap_notselected"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/register_button_browse"
            app:layout_constraintEnd_toStartOf="@+id/register_button_browse"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/register_button_browse"
            tools:ignore="TextViewEdits,SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/register_text_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:hint="@string/cap_enterpassword"
            android:inputType="textPassword"
            android:text="@string/cap_empty"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/register_button_browse"
            app:layout_constraintStart_toStartOf="@+id/register_text_username"
            app:layout_constraintTop_toBottomOf="@+id/register_text_username"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/register_button_browse"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:padding="4dp"
            android:scaleType="centerCrop"
            android:src="@drawable/icon_more_circle"
            android:tint="@color/control_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck,UseAppTint" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_button_settings"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:text="@string/cap_settings"
        android:textColor="@color/text_normal"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>